force-app/main/default/objects/Opportunity/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <label>Application Number</label>
    <type>Text</type>
    <length>10</length>
    <unique>true</unique>
</CustomField>