force-app/main/default/objects/Opportunity/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(HFLTR001) HF Jeevan Suraksha</fullName>
            </value>
            <value>
                <fullName>(HFHTR002) HF Arogya Suraksha</fullName>
            </value>
            <value>
                <fullName>(HFLEN003) HF Jeevan Samriddhi</fullName>
            </value>
            <value>
                <fullName>(HFLCP004) HF Bal Labh</fullName>
            </value>
            <value>
                <fullName>(HFLUL005) HF Nivesh Jeevan</fullName>
            </value>
            <value>
                <fullName>(HFHEN006) HF Jeevan Labh</fullName>
            </value>
            <value>
                <fullName>(HFLCP007) HF Bal Jeevan Umang</fullName>
            </value>
            <value>
                <fullName>(HFLUL008) HF Index Plus</fullName>
            </value>
            <value>
                <fullName>Child Plan</fullName>
                <isActive>false</isActive>
                <label>Child Plan</label>
            </value>
            <value>
                <fullName>Critical Illness</fullName>
                <isActive>false</isActive>
                <label>Critical Illness</label>
            </value>
            <value>
                <fullName>Endowment Plan</fullName>
                <isActive>false</isActive>
                <label>Endowment Plan</label>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
                <isActive>false</isActive>
                <label>Health Insurance</label>
            </value>
            <value>
                <fullName>Personal Accident</fullName>
                <isActive>false</isActive>
                <label>Personal Accident</label>
            </value>
            <value>
                <fullName>Term Insurance</fullName>
                <isActive>false</isActive>
                <label>Term Insurance</label>
            </value>
            <value>
                <fullName>ULIP</fullName>
                <isActive>false</isActive>
                <label>ULIP</label>
            </value>
            <value>
                <fullName>Whole Life</fullName>
                <isActive>false</isActive>
                <label>Whole Life</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>