force-app/main/default/objects/Opportunity/fields/Next_Best_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Action__c</fullName>
    <label>Next Best Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>