force-app/main/default/objects/Opportunity/fields/Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Holder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>