force-app/main/default/objects/Opportunity/fields/Policy_Term__c.field-meta.xml
<CustomField>
    <fullName>Policy_Term__c</fullName>
    <label>Policy Term (Yrs)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>