force-app/main/default/objects/Opportunity/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <label>Premium</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Insurance__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HF Jeevan Suraksha (HFLTR001/25-35 A/500 INR/20 TY)</fullName>
            </value>
            <value>
                <fullName>HF Jeevan Suraksha (HFLTR001/36-50 A/1000 INR/20 TY)</fullName>
            </value>
            <value>
                <fullName>HF Arogya Suraksha (HFHTR002/25-35 A/500 INR/10 TY)</fullName>
            </value>
            <value>
                <fullName>HF Arogya Suraksha (HFHTR002/36-50 A/1000 INR/10 TY)</fullName>
            </value>
            <value>
                <fullName>HF Jeevan Samriddhi (HFLEN003/25-35 A/1000 INR/20 TY)</fullName>
            </value>
            <value>
                <fullName>HF Jeevan Samriddhi (HFLEN003/36-45 A/2500 INR/20 TY)</fullName>
            </value>
            <value>
                <fullName>HF Jeevan Samriddhi (HFLEN003/46-55 A/5000 INR/20 TY)</fullName>
            </value>
            <value>
                <fullName>HF Bal Labh (HFLCP004/0-20 A/1000 INR/10 TY)</fullName>
            </value>
            <value>
                <fullName>HF Bal Labh (HFLCP004/0-20 A/2500 INR/15 TY)</fullName>
            </value>
            <value>
                <fullName>HF Bal Labh (HFLCP004/0-20 A/5000 INR/20 TY)</fullName>
            </value>
            <value>
                <fullName>HF Nivesh Jeevan (HFLUL005/25-35 A/1000 INR/15 TY)</fullName>
            </value>
            <value>
                <fullName>HF Nivesh Jeevan (HFLUL005/36-45 A/2500 INR/15 TY)</fullName>
            </value>
            <value>
                <fullName>HF Nivesh Jeevan (HFLUL005/46-55 A/5000 INR/15 TY)</fullName>
            </value>
            <value>
                <fullName>HF Jeevan Labh (HFHEN006/25-35 A/1000 INR/15 TY)</fullName>
            </value>
            <value>
                <fullName>HF Jeevan Labh (HFHEN006/36-45 A/2500 INR/15 TY)</fullName>
            </value>
            <value>
                <fullName>HF Jeevan Labh (HFHEN006/46-55 A/5000 INR/15 TY)</fullName>
            </value>
            <value>
                <fullName>HF Bal Jeevan Umang (HFLCP007/0-20 A/1000 INR/10 TY)</fullName>
            </value>
            <value>
                <fullName>HF Bal Jeevan Umang (HFLCP007/0-20 A/2500 INR/15 TY)</fullName>
            </value>
            <value>
                <fullName>HF Bal Jeevan Umang (HFLCP007/0-20 A/5000 INR/20 TY)</fullName>
            </value>
            <value>
                <fullName>HF Index Plus (HFLUL008/25-35 A/1000 INR/10 TY)</fullName>
            </value>
            <value>
                <fullName>HF Index Plus (HFLUL008/36-45 A/2500 INR/10 TY)</fullName>
            </value>
            <value>
                <fullName>HF Index Plus (HFLUL008/46-55 A/5000 INR/10 TY)</fullName>
            </value>
            <value>
                <fullName>25-35 Yrs Rs 1000 10 Yr Fund</fullName>
                <isActive>false</isActive>
                <label>25-35 Yrs Rs 1000 10 Yr Fund</label>
            </value>
            <value>
                <fullName>25-35 Yrs Rs 1000 15 Yr Fund</fullName>
                <isActive>false</isActive>
                <label>25-35 Yrs Rs 1000 15 Yr Fund</label>
            </value>
            <value>
                <fullName>25-35 Yrs Rs 1000 15 Yr Savings</fullName>
                <isActive>false</isActive>
                <label>25-35 Yrs Rs 1000 15 Yr Savings</label>
            </value>
            <value>
                <fullName>25-35 Yrs Rs 1000 20 Yr Savings</fullName>
                <isActive>false</isActive>
                <label>25-35 Yrs Rs 1000 20 Yr Savings</label>
            </value>
            <value>
                <fullName>25-35 Yrs Rs 500 10 Yr Cover</fullName>
                <isActive>false</isActive>
                <label>25-35 Yrs Rs 500 10 Yr Cover</label>
            </value>
            <value>
                <fullName>25-35 Yrs Rs 500 20 Yr Cover</fullName>
                <isActive>false</isActive>
                <label>25-35 Yrs Rs 500 20 Yr Cover</label>
            </value>
            <value>
                <fullName>36-45 Yrs Rs 2500 10 Yr Fund</fullName>
                <isActive>false</isActive>
                <label>36-45 Yrs Rs 2500 10 Yr Fund</label>
            </value>
            <value>
                <fullName>36-45 Yrs Rs 2500 15 Yr Fund</fullName>
                <isActive>false</isActive>
                <label>36-45 Yrs Rs 2500 15 Yr Fund</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>