force-app/main/default/objects/Opportunity/fields/Premium_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Premium_Frequency__c</fullName>
    <label>Premium Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Single Premium</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
                <isActive>false</isActive>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
                <isActive>false</isActive>
                <label>Semi-Annual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>