force-app/main/default/objects/Opportunity/fields/Premium_Type__c.field-meta.xml
<CustomField>
    <fullName>Premium_Type__c</fullName>
    <label>Premium Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Premium</fullName>
            </value>
            <value>
                <fullName>Single Premium</fullName>
            </value>
            <value>
                <fullName>Limited Premium Pay</fullName>
                <isActive>false</isActive>
                <label>Limited Premium Pay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>