force-app/main/default/objects/Opportunity/fields/Propensity_Score__c.field-meta.xml
<CustomField>
    <fullName>Propensity_Score__c</fullName>
    <label>Propensity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>