force-app/main/default/objects/Opportunity/fields/Underwriting_Status__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Status__c</fullName>
    <label>Underwriting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Loaded</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>