force-app/main/default/objects/Opportunity/recordTypes/Policy.recordType-meta.xml
<RecordType>
    <fullName>Policy</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Insurance policy opportunity — tracks the full lifecycle from prospect interest to policy activation.</description>
    <label>Policy</label>
</RecordType>